--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,4 +32,10 @@
         android:background="?attr/colorPrimary"
         app:popupTheme="@style/Theme.AndroidAcademy.PopupOverlay" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
