--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toTopOf="parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
     tools:context=".MovieDetailsActivity">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+
 
         <ImageView
             android:layout_width="match_parent"
@@ -37,7 +41,7 @@
             android:layout_height="15dp"
             android:layout_marginLeft="18dp"
             android:layout_marginTop="53dp"
-            android:src="@drawable/Path"
+            android:src="@drawable/path"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -261,18 +265,21 @@
             android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/second"
             app:layout_constraintTop_toBottomOf="@id/imageView3" />
 
         <TextView
             android:id="@+id/second"
             android:layout_width="82dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="8dp"
             android:text="@string/chris_e"
             android:textColor="@color/white"
             android:textStyle="bold"
+            android:layout_marginRight="0dp"
             app:layout_constraintStart_toEndOf="@id/first"
+            app:layout_constraintEnd_toStartOf="@id/third"
             app:layout_constraintTop_toBottomOf="@id/imageView2" />
 
         <TextView
@@ -281,10 +288,12 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginRight="0dp"
             android:text="@string/mark"
             android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/second"
+            app:layout_constraintEnd_toStartOf="@id/forth"
             app:layout_constraintTop_toBottomOf="@id/imageView2" />
 
         <TextView
@@ -293,13 +302,15 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginRight="18dp"
             android:text="@string/chris_h"
             android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/third"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imageView2"/>
-
-    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
