--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -12,7 +12,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/background"
     tools:context=".MovieDetailsActivity">
 
@@ -31,36 +31,30 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
-            android:src="@drawable/maskk"
+            android:src="@drawable/mask"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/back_img"
-            android:layout_width="6dp"
-            android:layout_height="15dp"
-            android:layout_marginLeft="18dp"
-            android:layout_marginTop="53dp"
-            android:src="@drawable/path"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="50dp"
             android:text="@string/back_btn_txt"
             android:textColor="@color/gray"
-            app:layout_constraintLeft_toRightOf="@+id/back_img"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:drawablePadding="8dp"
+            app:drawableStartCompat="@drawable/path" />
 
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="225dp"
             android:src="@drawable/rectangle"
             app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +64,7 @@
             android:id="@+id/age"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="226dp"
             android:text="@string/txt13"
             android:textColor="@color/white"
@@ -82,7 +76,7 @@
             android:id="@+id/film_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
             android:text="@string/film_title"
             android:textColor="@color/white"
@@ -95,7 +89,7 @@
             android:id="@+id/genre_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:text="@string/genre"
             android:textColor="@color/red"
             app:layout_constraintStart_toStartOf="parent"
@@ -105,9 +99,9 @@
             android:id="@+id/star1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginRight="2dp"
+            android:layout_marginEnd="2dp"
             android:src="@drawable/star_icon_red"
             app:layout_constraintEnd_toStartOf="@id/star2"
             app:layout_constraintStart_toStartOf="parent"
@@ -118,7 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginRight="2dp"
+            android:layout_marginEnd="2dp"
             android:src="@drawable/star_icon_red"
             app:layout_constraintEnd_toStartOf="@id/star3"
             app:layout_constraintStart_toEndOf="@id/star1"
@@ -149,7 +143,7 @@
             android:id="@+id/star5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="16dp"
             android:src="@drawable/star_icon_gray"
             app:layout_constraintStart_toEndOf="@id/star4"
@@ -159,7 +153,7 @@
             android:id="@+id/num_of_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="12dp"
             android:text="@string/num_of_views"
             android:textColor="@color/gray"
@@ -171,7 +165,7 @@
             android:id="@+id/views_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="12dp"
             android:text="@string/reviews_txt"
             android:textColor="@color/gray"
@@ -183,7 +177,7 @@
             android:id="@+id/storyline_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="72dp"
             android:text="@string/storyline_txt"
             android:textColor="@color/white"
@@ -194,7 +188,7 @@
             android:id="@+id/description_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
             android:text="@string/storyline_context"
             android:textColor="@color/white"
@@ -205,7 +199,7 @@
             android:id="@+id/cast"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="@string/cast_txt"
             android:textColor="@color/white"
@@ -260,7 +254,6 @@
             android:id="@+id/first"
             android:layout_width="82dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
             android:text="@string/robert"
             android:textColor="@color/white"
@@ -273,12 +266,10 @@
             android:id="@+id/second"
             android:layout_width="82dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
             android:layout_marginTop="8dp"
             android:text="@string/chris_e"
             android:textColor="@color/white"
             android:textStyle="bold"
-            android:layout_marginRight="0dp"
             app:layout_constraintStart_toEndOf="@id/first"
             app:layout_constraintEnd_toStartOf="@id/third"
             app:layout_constraintTop_toBottomOf="@id/imageView2" />
@@ -287,9 +278,7 @@
             android:id="@+id/third"
             android:layout_width="82dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
-            android:layout_marginRight="0dp"
             android:text="@string/mark"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -301,15 +290,13 @@
             android:id="@+id/forth"
             android:layout_width="82dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
-            android:layout_marginRight="18dp"
             android:text="@string/chris_h"
             android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/third"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imageView2"/>
+            app:layout_constraintTop_toBottomOf="@id/imageView5"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
