--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -17,8 +17,6 @@
         tools:context=".MovieDetailsActivity"
         android:paddingBottom="16dp">
 
-
-
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,18 +36,18 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-
         <TextView
+            android:id="@+id/back_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="50dp"
+            android:drawablePadding="8dp"
             android:text="@string/back_btn_txt"
             android:textColor="@color/gray"
+            app:drawableStartCompat="@drawable/path"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:drawablePadding="8dp"
-            app:drawableStartCompat="@drawable/path" />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <ImageView
@@ -96,60 +94,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/film_title" />
 
-        <ImageView
-            android:id="@+id/star1"
+        <RatingBar
+            android:id="@+id/ratingbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="2dp"
-            android:src="@drawable/star_icon_red"
-            app:layout_constraintEnd_toStartOf="@id/star2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/genre_txt" />
-
-        <ImageView
-            android:id="@+id/star2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="2dp"
-            android:src="@drawable/star_icon_red"
-            app:layout_constraintEnd_toStartOf="@id/star3"
-            app:layout_constraintStart_toEndOf="@id/star1"
-            app:layout_constraintTop_toBottomOf="@+id/genre_txt" />
-
-        <ImageView
-            android:id="@+id/star3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="2dp"
-            android:src="@drawable/star_icon_red"
-            app:layout_constraintEnd_toStartOf="@id/star4"
-            app:layout_constraintStart_toEndOf="@id/star2"
-            app:layout_constraintTop_toBottomOf="@+id/genre_txt" />
-
-        <ImageView
-            android:id="@+id/star4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/star_icon_red"
-            app:layout_constraintEnd_toStartOf="@id/star5"
-            app:layout_constraintStart_toEndOf="@id/star3"
-            app:layout_constraintTop_toBottomOf="@+id/genre_txt" />
-
-        <ImageView
-            android:id="@+id/star5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/star_icon_gray"
-            app:layout_constraintStart_toEndOf="@id/star4"
-            app:layout_constraintTop_toBottomOf="@+id/genre_txt" />
-
+            app:layout_constraintTop_toBottomOf="@+id/genre_txt"
+            android:numStars="5"
+            android:rating="4"
+            android:theme="@style/RatingBar"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="14dp"
+            style="?android:attr/ratingBarStyleSmall"/>
         <TextView
             android:id="@+id/num_of_view"
             android:layout_width="wrap_content"
@@ -159,7 +115,7 @@
             android:text="@string/num_of_views"
             android:textColor="@color/gray"
             android:textStyle="bold"
-            app:layout_constraintLeft_toRightOf="@id/star5"
+            app:layout_constraintLeft_toRightOf="@id/ratingbar"
             app:layout_constraintTop_toBottomOf="@+id/genre_txt" />
 
         <TextView
