--- a/app/src/main/res/layout/fragment_movies_list.xml
+++ b/app/src/main/res/layout/fragment_movies_list.xml
@@ -1,195 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
     android:id="@+id/fragment_movies_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".FragmentMoviesList"
     android:background="@color/background">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/movie_list_item"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/movies_list"
-        android:textSize="14sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="50dp"
-        android:layout_marginStart="12dp"
-        android:textColor="@color/white"
-        app:drawableStartCompat="@drawable/target"
-        android:drawablePadding="10dp"/>
+        android:paddingBottom="8dp"
+        tools:context=".FragmentMoviesList">
 
-    <ImageView
-        android:id="@+id/movie_bg_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/bg"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="102dp"
-        android:layout_marginStart="12dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/movies_list"
+            android:textSize="14sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="50dp"
+            android:layout_marginStart="12dp"
+            android:textColor="@color/white"
+            app:drawableStartCompat="@drawable/target"
+            android:drawablePadding="10dp"/>
 
-    <ImageView
-        android:id="@+id/movie_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        android:src="@drawable/movie"
-        android:foreground="@drawable/mask"
-        app:layout_constraintTop_toTopOf="@id/movie_bg_img"
-        app:layout_constraintStart_toStartOf="@id/movie_bg_img"
-        android:layout_margin="2dp"/>
+        <ImageView
+            android:id="@+id/movie_bg_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/bg"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="102dp"
+            android:layout_marginStart="12dp"/>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/rectangle"
-        app:layout_constraintStart_toStartOf="@id/movie_bg_img"
-        app:layout_constraintTop_toTopOf="@id/movie_bg_img"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="6dp"/>
+        <ImageView
+            android:id="@+id/movie_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            android:src="@drawable/movie"
+            android:foreground="@drawable/mask"
+            app:layout_constraintTop_toTopOf="@id/movie_bg_img"
+            app:layout_constraintStart_toStartOf="@id/movie_bg_img"
+            android:layout_margin="2dp"/>
 
-    <TextView
-        android:id="@+id/age"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="9dp"
-        android:text="@string/txt13"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@id/movie_bg_img"
-        app:layout_constraintTop_toTopOf="@id/movie_bg_img" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/rectangle"
+            app:layout_constraintStart_toStartOf="@id/movie_bg_img"
+            app:layout_constraintTop_toTopOf="@id/movie_bg_img"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="6dp"/>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/like"
-        app:layout_constraintTop_toTopOf="@id/movie_bg_img"
-        app:layout_constraintEnd_toEndOf="@id/movie_bg_img"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="6dp"/>
+        <TextView
+            android:id="@+id/age"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="9dp"
+            android:text="@string/txt13"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@id/movie_bg_img"
+            app:layout_constraintTop_toTopOf="@id/movie_bg_img" />
 
-    <TextView
-        android:id="@+id/genre_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="22dp"
-        android:text="@string/genre"
-        android:textColor="@color/red"
-        android:textSize="8sp"
-        app:layout_constraintStart_toStartOf="@id/movie_bg_img"
-        app:layout_constraintBottom_toBottomOf="@id/movie_img" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/like"
+            app:layout_constraintTop_toTopOf="@id/movie_bg_img"
+            app:layout_constraintEnd_toEndOf="@id/movie_bg_img"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="6dp"/>
 
-    <ImageView
-        android:id="@+id/ratingbar1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="2dp"
-        android:src="@drawable/star_icon_red_8"
-        app:layout_constraintEnd_toStartOf="@id/ratingbar2"
-        app:layout_constraintStart_toStartOf="@id/movie_bg_img"
-        app:layout_constraintTop_toBottomOf="@+id/genre_txt" />
-
-    <ImageView
-        android:id="@+id/ratingbar2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="2dp"
-        android:src="@drawable/star_icon_red_8"
-        app:layout_constraintEnd_toStartOf="@id/ratingbar3"
-        app:layout_constraintStart_toEndOf="@id/ratingbar1"
-        app:layout_constraintTop_toBottomOf="@+id/genre_txt" />
-
-    <ImageView
-        android:id="@+id/ratingbar3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:layout_marginRight="2dp"
-        android:src="@drawable/star_icon_red_8"
-        app:layout_constraintEnd_toStartOf="@id/ratingbar4"
-        app:layout_constraintStart_toEndOf="@id/ratingbar2"
-        app:layout_constraintTop_toBottomOf="@+id/genre_txt" />
-
-    <ImageView
-        android:id="@+id/ratingbar4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:src="@drawable/star_icon_red_8"
-        app:layout_constraintEnd_toStartOf="@id/ratingbar5"
-        app:layout_constraintStart_toEndOf="@id/ratingbar3"
-        app:layout_constraintTop_toBottomOf="@+id/genre_txt" />
-
-    <ImageView
-        android:id="@+id/ratingbar5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="6dp"
-        android:src="@drawable/star_icon_gray_8"
-        app:layout_constraintStart_toEndOf="@id/ratingbar4"
-        app:layout_constraintTop_toBottomOf="@+id/genre_txt" />
-
-    <TextView
-        android:id="@+id/num_of_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="4dp"
-        android:text="@string/num_of_views"
-        android:textColor="@color/gray"
-        android:textStyle="bold"
-        android:textSize="8sp"
-        app:layout_constraintLeft_toRightOf="@id/ratingbar5"
-        app:layout_constraintTop_toBottomOf="@+id/genre_txt" />
-
-    <TextView
-        android:id="@+id/views_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="4dp"
-        android:text="@string/reviews_txt"
-        android:textColor="@color/gray"
-        android:textStyle="bold"
-        android:textSize="8sp"
-        app:layout_constraintStart_toEndOf="@id/num_of_view"
-        app:layout_constraintTop_toBottomOf="@+id/genre_txt" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/movie_img"
-        app:layout_constraintStart_toStartOf="@id/movie_bg_img"
-        android:text="@string/avengers_end_game"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="14sp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/movie_bg_img"
-        app:layout_constraintStart_toStartOf="@id/movie_bg_img"
-        android:text="@string/movie_duration"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
-        android:textColor="#565665"
-        android:textStyle="bold"
-        android:textSize="8sp"/>
+        <TextView
+            android:id="@+id/genre_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="22dp"
+            android:text="@string/genre"
+            android:textColor="@color/red"
+            android:textSize="8sp"
+            app:layout_constraintStart_toStartOf="@id/movie_bg_img"
+            app:layout_constraintBottom_toBottomOf="@id/movie_img" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.AppCompatRatingBar
+            android:id="@+id/ratingbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/movie_bg_img"
+            app:layout_constraintBottom_toBottomOf="@+id/movie_img"
+            android:numStars="5"
+            android:rating="4"
+            android:theme="@style/RatingBar"
+            android:layout_marginStart="-2dp"
+            android:layout_marginBottom="4dp"
+            android:scaleX="0.75"
+            android:scaleY="0.75"
+            style="?android:attr/ratingBarStyleSmall"/>
+
+        <TextView
+            android:id="@+id/num_of_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/num_of_views"
+            android:textColor="@color/gray"
+            android:textStyle="bold"
+            android:textSize="8sp"
+            app:layout_constraintLeft_toRightOf="@id/ratingbar"
+            app:layout_constraintTop_toBottomOf="@+id/genre_txt" />
+
+        <TextView
+            android:id="@+id/views_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/reviews_txt"
+            android:textColor="@color/gray"
+            android:textStyle="bold"
+            android:textSize="8sp"
+            app:layout_constraintStart_toEndOf="@id/num_of_view"
+            app:layout_constraintTop_toBottomOf="@+id/genre_txt" />
+
+        <TextView
+            android:id="@+id/movie_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/avengers_end_game"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@id/movie_bg_img"
+            app:layout_constraintTop_toBottomOf="@id/movie_img" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/movie_bg_img"
+            app:layout_constraintStart_toStartOf="@id/movie_bg_img"
+            android:text="@string/movie_duration"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            android:textColor="#565665"
+            android:textStyle="bold"
+            android:textSize="8sp"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
