Persistency v2. All suggestions realised

--- a/app/src/main/res/layout/view_holder_movie.xml
+++ b/app/src/main/res/layout/view_holder_movie.xml
@@ -11,7 +11,7 @@
 
         <ImageView
                 android:id="@+id/movie_bg_img"
-                android:layout_width="wrap_content"
+                android:layout_width="155dp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/bg"
                 app:layout_constraintTop_toTopOf="parent"
@@ -19,12 +19,12 @@
 
         <ImageView
             android:id="@+id/iv_movie"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="152dp"
+            android:layout_height="248dp"
             android:foreground="@drawable/mask"
             android:scaleType="centerCrop"
             android:src="@drawable/movie"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="2dp"
             android:layout_marginHorizontal="4dp"
             app:layout_constraintStart_toStartOf="@id/movie_bg_img"
             app:layout_constraintTop_toTopOf="@+id/movie_bg_img"
@@ -117,10 +117,10 @@
             android:layout_width="153dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="1dp"
             tools:text="@string/avengers_end_game"
             android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:ellipsize="end"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@id/movie_bg_img"
@@ -133,7 +133,9 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@id/movie_bg_img"
             app:layout_constraintStart_toStartOf="@id/movie_bg_img"
+            app:layout_constraintTop_toTopOf="@+id/movie_title"
             tools:text="137"
+            android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
             android:textColor="#565665"
@@ -145,7 +147,9 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@id/movie_bg_img"
             app:layout_constraintStart_toEndOf="@id/tv_duration"
+            app:layout_constraintTop_toTopOf="@+id/movie_title"
             android:text="@string/movie_duration"
+            android:layout_marginTop="8dp"
             android:layout_marginStart="4dp"
             android:layout_marginBottom="8dp"
             android:textColor="#565665"
